comp_out5.txt

> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:7: error: cannot find symbol
public class FollowPathCommand extends CommandBase {
                                       ^
  symbol: class CommandBase
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:22: error: cannot find symbol
        addRequirements(follower);
        ^
  symbol:   method addRequirements(org.areslib.core.localization.AresFollower)
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:33: error: cannot find symbol
        addRequirements(follower);
        ^
  symbol:   method addRequirements(org.areslib.core.localization.AresFollower)
  location: class org.areslib.command.FollowPathCommand
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:36: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:45: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:51: error: method does not override or implement a method from a supertype
    @Override
    ^
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\areslib\command\FollowPathCommand.java:56: error: method does not override or implement a method from a supertype
    @Override
    ^
7 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
